2017-03-08  Matt Baker  <mattbaker@apple.com>

        REGRESSION (r212998): Web Inspector: DetailsSections with options have broken layout
        https://bugs.webkit.org/show_bug.cgi?id=169350

        Reviewed by Brian Burg.

        * UserInterface/Views/DetailsSection.css:
        (.details-section):
        Fix negative margin.
        (body[dir=ltr] .details-section > .header > :matches(label, .node-link, .go-to-arrow),):
        (body[dir=ltr] .details-section > .header::before,):
        (body[dir=ltr] .details-section > .header > :matches(label, .node-link, .go-to-arrow, .options > .navigation-bar),): Deleted.
        It looks like :matches doesn't accept compound selectors in its selector list.

2017-03-07  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: DOM Tree broken if an element has a "debounce" attribute
        https://bugs.webkit.org/show_bug.cgi?id=169336
        <rdar://problem/30899430>

        Reviewed by Brian Burg.

        * UserInterface/Models/DOMNode.js:
        (WebInspector.DOMNode):
        (WebInspector.DOMNode.prototype.getAttribute):
        (WebInspector.DOMNode.prototype.removeAttribute.mycallback):
        (WebInspector.DOMNode.prototype.removeAttribute):
        Convert the attributes map to an actual Map to avoid name collisions
        with Object.prototype properties.

2017-03-07  Chris Dumez  <cdumez@apple.com>

        Drop non-standard MessageEvent.webkitInitMessageEvent()
        https://bugs.webkit.org/show_bug.cgi?id=169295

        Reviewed by Joseph Pecoraro.

        Drop MessageEvent.webkitInitMessageEvent and update parameters for various
        init*Event() operations to match the current implementation.

        * UserInterface/Models/NativeFunctionParameters.js:

2017-03-04  Nikita Vasilyev  <nvasilyev@apple.com>

        Web Inspector: Show Web Socket connections in Network tab
        https://bugs.webkit.org/show_bug.cgi?id=167520

        Reviewed by Joseph Pecoraro.
